# wasm-engine-benching

./: .gitmodules  CMakeLists.txt  build-wamr-aot.sh  build-wamrc.sh  build-wasm2c.sh  run.sh
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  wamr_aot_wrapper.c  wamr_aot_wrapper.h  wasm2c_wrapper.c  wasm2c_wrapper.h
wasm-module/: .gitignore  add_wasm.h  build-wasm.sh  module.cpp
